--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -21,9 +21,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+
   </head>
 
-  <body ng-app="starter" style="overflow:hidden;" class="platform-android platform-cordova platform-webview">
+  <body ng-app="starter" ng-controller="PopupCtrl" class="platform-android platform-cordova platform-webview">
     <ion-nav-view></ion-nav-view>
   <scrip>
 
