--- a/www/index.html
+++ b/www/index.html
@@ -21,9 +21,11 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
   </head>
 
-  <body ng-app="starter" >
+  <body ng-app="starter" ng-controller="PopupCtrl">
     <ion-nav-view></ion-nav-view>
   <scrip>
 
