--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <script src="lib/jquery-2.1.3.min/index.js"></script>
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -16,19 +16,20 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="js/SQLite/SQLitePlugin.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="js/timer.js"></script>
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap.min.js"></script>
   </head>
 
-  <body ng-app="starter" ng-controller="PopupCtrl">
+  <body ng-app="starter" ng-controller="PopupCtrl" class="font-family" style="font-size: 16px;">
     <ion-nav-view></ion-nav-view>
-  <scrip>
-
-  </scrip>
   </body>
 </html>
