--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -29,7 +29,7 @@
     <script src="lib/angular-bootstrap/ui-bootstrap.min.js"></script>
   </head>
 
-  <body ng-app="starter" ng-controller="PopupCtrl" class="font-family platform-android platform-cordova platform-webview" style="font-size: 16px;">
+  <body ng-app="starter" ng-controller="PopupCtrl" class="font-family" style="font-size: 16px;">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
